k8s/app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitops-ci-hw
  name: gitops-ci-hw-${VERSION}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitops-ci-hw-${VERSION}
      version: "1"
  template:
    metadata:
      labels:
        app: gitops-ci-hw
        version: "1"
    spec:
      containers:
        - image: olesiayav/gitops_ci_hw
          name: gitops-ci-hw
          ports:
            - name: http
              containerPort: 8050
