k8s/app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitops-ci-hw
  name: gitops-ci-hw-v2
spec:
  replicas: 5
  selector:
    matchLabels:
      app: gitops-ci-hw
      version: 2
  template:
    metadata:
      labels:
        app: gitops-ci-hw
        version: 2
    spec:
      containers:
        - image: olesiayav/gitops_ci_hw
          name: gitops-ci-hw
          ports:
            - name: http
              containerPort: 8050
