k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitops-ci-hw
  name: gitops-ci-hw
spec:
  ports:
    - name: http
      port: 8050
      targetPort: http
  selector:
    app: gitops-ci-hw
  type: ClusterIP
